[tool.poetry]
name = "problem_bank_helpers"
version = "0.1.0"
description = "Helpful utilities for the open problem bank."
authors = ["Firas Moosvi and Jake Bobowski"]
license = "MIT"
readme = "README.md"
documentation = "https://problem_bank_helpers.readthedocs.io/en/latest/"
homepage = "https://github.com/open-resources/problem_bank_helpers"
repository = "https://github.com/open-resources/problem_bank_helpers"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
